--- a/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
+++ b/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
@@ -8,8 +8,7 @@
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Developing a modular way to manipulate date & datetime selections in
-        Crowdskout
+        Developing a modular way to manipulate date & datetime selections in Crowdskout
       </div>
     </div>
 
@@ -22,10 +21,7 @@
 
     <div class="work-description">
       <p>
-        As we grew the Crowdskout app to support more complex time-series graphs
-        and other date & time dependent inputs, we encountered a need to overhaul
-        our date & time UI and data treatment. I led the effort to overhaul our
-        date & time management.
+        As we grew the Crowdskout app to support more complex time-series graphs and other date & time dependent inputs, we encountered a need to overhaul our date & time UI and data treatment. I led the effort to overhaul our date & time management.
       </p>
     </div>
 
@@ -37,12 +33,7 @@
     </h2>
 
     <p>
-      Using the <a class="work-body-link" target="_blank" href="https://momentjs.com/">
-      Moment.js</a> library as a backbone for transforming and handling our
-      date & datetime data, I built a custom component for accepting input data,
-      transforming, and saving data in ISO8601 format. The component was built
-      to be a flexible AngularJS directive that could easily shift implementations
-      between date alone, or datetime, depending on varying needs.
+      Using the <a class="work-body-link" target="_blank" href="https://momentjs.com/">Moment.js</a> library as a backbone for transforming and handling our date & datetime data, I built a custom component for accepting input data, transforming, and saving data in ISO8601 format. The component was built to be a flexible AngularJS directive that could easily shift implementations between date alone, or datetime, depending on varying needs.
     </p>
 
     <figure class="work-body-figure">
@@ -66,9 +57,7 @@
     </figure>
 
     <p>
-      Crowdskout's date & time component is a complex, interactive module
-      within the application. If you have any questions, I'm happy to walk through
-      the design and code involved. Thanks for reading.
+      Crowdskout's date & time component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
 
   </div>
