--- a/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
+++ b/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
@@ -20,10 +20,7 @@
 
     <div class="work-description">
       <p>
-        Audience segmentation is at the heart of Crowdskout's data analytics
-        system. In 2016, after the segmentation tool grew in complexity, we
-        overhauled the interface to this critical tool to better support the
-        new capabilities it offered.
+        Audience segmentation is at the heart of Crowdskout's data analytics system. In 2016, after the segmentation tool grew in complexity, we overhauled the interface to this critical tool to better support the new capabilities it offered.
       </p>
     </div>
 
@@ -35,9 +32,7 @@
     </h2>
 
     <p>
-      Audience segments in Crowdskout are made up of deanonymized "profiles." A
-      mock profile is shown below. Each profile is made up of hundreds of criteria,
-      including demographic information as well as many other types of info.
+      Audience segments in Crowdskout are made up of deanonymized "profiles." A mock profile is shown below. Each profile is made up of hundreds of criteria, including demographic information as well as many other types of info.
     </p>
 
     <figure class="work-body-figure">
@@ -61,15 +56,11 @@
     </figure>
 
     <p>
-      Users build segments of profiles by selecting the criteria that they want to
-      segment on, for instance, people of a certain gender, age, and/or ethnicity.
-      Doing so, they can find all of the profiles in their database that match
-      these criteria.
+      Users build segments of profiles by selecting the criteria that they want to segment on, for instance, people of a certain gender, age, and/or ethnicity. Doing so, they can find all of the profiles in their database that match these criteria.
     </p>
 
     <p>
-      By creating a segment, Crowdskout users can monitor these different segments
-      of profiles, and take action to contact these individuals in different ways.
+      By creating a segment, Crowdskout users can monitor these different segments of profiles, and take action to contact these individuals in different ways.
     </p>
 
     <h2 class="work-body-h2">
@@ -77,8 +68,7 @@
     </h2>
 
     <p>
-      We updated the segmenting tool to improve the way users create and manage
-      their audience segments.
+      We updated the segmenting tool to improve the way users create and manage their audience segments.
     </p>
 
     <figure class="work-body-figure">
@@ -97,8 +87,7 @@
         class="work-body-image border"
         alt="">
       <figcaption class="work-body-image-caption">
-        As users select criteria to segment on, their selections appear,
-        and their profiles filter to the matching criteria
+        As users select criteria to segment on, their selections appear, and their profiles filter to the matching criteria
       </figcaption>
     </figure>
 
@@ -108,8 +97,7 @@
         class="work-body-image border"
         alt="">
       <figcaption class="work-body-image-caption">
-        Power users may write complex segments using CQL strings - a variant of
-        SQL parsed by Crowdskout
+        Power users may write complex segments using CQL strings - a variant of SQL parsed by Crowdskout
       </figcaption>
     </figure>
 
@@ -119,16 +107,12 @@
         class="work-body-image border"
         alt="">
       <figcaption class="work-body-image-caption">
-        Users immediately see statistics about their segments' usable data and
-        demographics. They may create unique graphs to see other detailed statistics
-        about their segments.
+        Users immediately see statistics about their segments' usable data and demographics. They may create unique graphs to see other detailed statistics about their segments.
       </figcaption>
     </figure>
 
     <p>
-      Crowdskout's segmenting component is a complex, interactive module
-      within the application. If you have any questions, I'm happy to walk through
-      the design and code involved. Thanks for reading.
+      Crowdskout's segmenting component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
 
   </div>
