--- a/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
+++ b/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
@@ -8,8 +8,7 @@
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Revamping the way AT&T presents their brand and uses storytelling to share their
-        corporate & social responsibility campaigns
+        Revamping the way AT&T presents their brand and uses storytelling to share their corporate & social responsibility campaigns
       </div>
     </div>
 
@@ -24,10 +23,7 @@
 
     <div class="work-description">
       <p>
-        From 2014-2015, I worked with AT&T to redesign their CSR brand and
-        reconsider the way they use blogging and social media to share their
-        stories. This was a project that I helped lead with our creative and
-        engineering directors.
+        From 2014-2015, I worked with AT&T to redesign their CSR brand and reconsider the way they use blogging and social media to share their stories. This was a project that I helped lead with our creative and engineering directors.
       </p>
     </div>
 
@@ -39,11 +35,7 @@
     </h2>
 
     <p>
-      The initiative emerged in collaboration with our client stakeholders at AT&T.
-      They were internally reviewing their CSR brand and direction. Over the past
-      four years, we had helped them become one of the most revered CSR brands in
-      the Fortune 100. They wanted to capitalize on that success, and we collaborated
-      with them to revamp their CSR identity.
+      The initiative emerged in collaboration with our client stakeholders at AT&T. They were internally reviewing their CSR brand and direction. Over the past four years, we had helped them become one of the most revered CSR brands in the Fortune 100. They wanted to capitalize on that success, and we collaborated with them to revamp their CSR identity.
     </p>
 
   </div>
