--- a/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
+++ b/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
@@ -21,11 +21,7 @@
 
     <div class="work-description">
       <p>
-        I joined Crowdskout in 2015 with a directive to overhaul Crowdskout's
-        data visualization system. Working with a team of engineers, I researched
-        and built the foundations of the system. The system was designed
-        so that a novice user could quickly learn and operate it to design and
-        deliver complex visualizations without any training.
+        I joined Crowdskout in 2015 with a directive to overhaul Crowdskout's data visualization system. Working with a team of engineers, I researched and built the foundations of the system. The system was designed so that a novice user could quickly learn and operate it to design and deliver complex visualizations without any training.
       </p>
     </div>
 
@@ -37,17 +33,11 @@
     </h2>
 
     <p>
-      We built the system using a mix of <a class="work-body-link" target="_blank" href="https://d3js.org/">
-      D3</a> and a library called <a class="work-body-link" target="_blank" href="https://www.amcharts.com/">
-      amCharts</a>, also built on D3. The visualization component integrated with
-      the Crowdskout app as an Angular component, coded with a mix of vanilla JavaScript
-      and AngularJS.
+      We built the system using a mix of <a class="work-body-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="work-body-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3. The visualization component integrated with the Crowdskout app as an Angular component, coded with a mix of vanilla JavaScript and AngularJS.
     </p>
 
     <p>
-      Using a multi-step editor, a user could select an audience segment,
-      criteria, and a graph type, and create a graph that could be customized or
-      exported in a variety of ways.
+      Using a multi-step editor, a user could select an audience segment, criteria, and a graph type, and create a graph that could be customized or exported in a variety of ways.
     </p>
 
     <figure class="work-body-figure">
@@ -111,9 +101,7 @@
     </figure>
 
     <p>
-      Crowdskout's data visualization component is a complex, interactive module
-      of the application. If you have any questions, I'm happy to walk through the
-      design and code involved. Thanks for reading.
+      Crowdskout's data visualization component is a complex, interactive module of the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
 
   </div>
