--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -8,8 +8,7 @@
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Enabling users to create, manage, and interpret data from surveys & forms
-        using a variety of designs and conditions
+        Enabling users to create, manage, and interpret data from surveys & forms using a variety of designs and conditions
       </div>
     </div>
 
@@ -21,10 +20,7 @@
 
     <div class="work-description">
       <p>
-        One way that Crowdskout users can interact with their profiles is to
-        deliver rich surveys and forms for a variety of circumstances. I overhauled
-        the form system in 2015 and 2016, and added a system for conditionally
-        branching questions to facilitate rich survey creation.
+        One way that Crowdskout users can interact with their profiles is to deliver rich surveys and forms for a variety of circumstances. I overhauled the form system in 2015 and 2016, and added a system for conditionally branching questions to facilitate rich survey creation.
       </p>
     </div>
 
@@ -36,9 +32,7 @@
     </h2>
 
     <p>
-      A Crowdskout user may use forms to ask any number of questions. These questions
-      in turn can fuel the creating or updating of any of the hundreds of Crowdskout
-      profile fields that exist in their database.
+      A Crowdskout user may use forms to ask any number of questions. These questions in turn can fuel the creating or updating of any of the hundreds of Crowdskout profile fields that exist in their database.
     </p>
 
     <figure class="work-body-figure">
@@ -62,9 +56,7 @@
     </figure>
 
     <p>
-      Crowdskout's form editor component is a complex, interactive module
-      within the application. If you have any questions, I'm happy to walk through
-      the design and code involved. Thanks for reading.
+      Crowdskout's form editor component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
 
   </div>
