--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -26,10 +26,7 @@
 
     <div class="work-description">
       <p>
-        From 2012-2015, one of my responsibilities at VOX Global was to run a video
-        practice group for VOX Global. This was much like an agency within the
-        agency - I managed clients and produced complex live action and animated
-        videos for a range of budgets and needs.
+        From 2012-2015, one of my responsibilities at VOX Global was to run a video practice group for VOX Global. This was much like an agency within the agency - I managed clients and produced complex live action and animated videos for a range of budgets and needs.
       </p>
     </div>
 
@@ -41,9 +38,7 @@
     </h2>
 
     <p>
-      You can find a portfolio of some of the work I produced during this time
-      online at <a class="work-body-link" target="_blank" href="https://vimeo.com/petergcutler">
-      vimeo.com/petergcutler</a>.
+      You can find a portfolio of some of the work I produced during this time online at <a class="work-body-link" target="_blank" href="https://vimeo.com/petergcutler">vimeo.com/petergcutler</a>.
     </p>
 
   </div>
