--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -38,7 +38,27 @@
     </h2>
 
     <p>
-      You can find a portfolio of some of the work I produced during this time online at <a class="work-body-link" target="_blank" href="https://vimeo.com/petergcutler">vimeo.com/petergcutler</a>.
+      These pieces were created using Adobe Photoshop, Illustrator, After Effects, and Maxon Cinema 4d Studio.
+    </p>
+
+    <h3 class="work-body-h3">
+      AT&T People Planet Possibilities
+    </h3>
+
+    <div class="vimeo-embed" style="padding:56.25% 0 0 0;position:relative;">
+      <iframe src="https://player.vimeo.com/video/118919919?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+
+    <h3 class="work-body-h3">
+      Lumina Foundation Financial Aid
+    </h3>
+
+    <div class="vimeo-embed" style="padding:56.25% 0 0 0;position:relative;">
+      <iframe src="https://player.vimeo.com/video/112713629?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+
+    <p>
+      You can find more work from my video portfolio online at <a class="work-body-link" target="_blank" href="https://vimeo.com/petergcutler">vimeo.com/petergcutler</a>.
     </p>
 
   </div>
