--- a/src/scss/_work-details.scss
+++ b/src/scss/_work-details.scss
@@ -36,6 +36,11 @@
   }
 }
 
+.vimeo-embed {
+  margin-top: 1em;
+  margin-bottom: 3em;
+}
+
 // .arrow-left-stroke {
 //   &::before {
 //     content: '\25C5';
