work on new image viewer; lodash; abstracting old image srcs

--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -58,10 +58,32 @@
   margin: 1.4em 0;
 }
 
+.arrow-off {
+  display: none;
+}
+
+// .image-viewer {
+//   max-width: 100%;
+//   max-height: 10em;
+//
+//   @include respond-to('medium') {
+//     max-height: 10em;
+//   }
+//
+//   @include respond-to('mediumer') {
+//     max-height: 15em;
+//   }
+//
+//   @include respond-to('large') {
+//     max-height: 20em;
+//   }
+// }
+
 .work-body-image {
   // display: block;
   max-width: 100%;
   height: auto;
+  cursor: pointer;
 
   @include respond-to('medium') {
     max-width: 30em;
