--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -79,17 +79,11 @@
       Seattle presents many distinct populations of homeless residents who are relying on a variety of housing programs for support.
     </p>
 
-    <figure class="work-body-figure">
-      <a target="_blank" href="https://www.dropbox.com/s/blttl2cqo2mbaiy/homeless-housing-programs.png?dl=0">
-        <img
-          src="../assets/images/work/uw-secure-storage/homeless-housing-programs.png"
-          class="work-body-image border"
-          alt="The four types of homeless housing programs">
-      </a>
-      <figcaption class="work-body-image-caption">
-        The four types of homeless housing programs in Seattle.
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      imageSrc="../assets/images/work/uw-secure-storage/homeless-housing-programs.png"
+      description="The four types of homeless housing programs in Seattle"
+      [borderOn]="true">
+    </app-image-viewer>
 
     <p>
       These housing programs differ across the types of shelter, staff support, amenities, and other factors of care provided. Understanding this complex network of housing programs was a critical first step to designing a viable solution.
@@ -103,17 +97,11 @@
       Beyond existing housing programs, we also wanted to understand the financial resources that the city puts towards homelessness. We investigated how budgetary resources are organized in Seattle.
     </p>
 
-    <figure class="work-body-figure">
-      <a target="_blank" href="https://www.dropbox.com/s/pxpny3x6ldeahjt/homelessness-budgets.jpeg?dl=0">
-        <img
-          src="../assets/images/work/uw-secure-storage/homelessness-budgets.jpeg"
-          class="work-body-image border"
-          alt="The homelessness spending budget in Seattle">
-      </a>
-      <figcaption class="work-body-image-caption">
-        The homelessness spending budget in Seattle
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      imageSrc="../assets/images/work/uw-secure-storage/homelessness-budgets.jpeg"
+      description="The homelessness spending budget in Seattle"
+      [borderOn]="true">
+    </app-image-viewer>
 
     <p>
       The resources here, like in many cities, are scarce. But understanding the financial context was critical to designing a realistic solution.
@@ -139,29 +127,21 @@
       As we researched existing solutions across the domain, we found that most of the designed solutions didn't account for the wide variety of housing programs that exist. Existing solutions also frequently employed costly materials or failed to align with the resource scarcity of the system.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/uw-secure-storage/hope-lockers.jpg"
-        class="work-body-image border"
-        alt="HOPE Lockers">
-      <figcaption class="work-body-image-caption">
-        The H.O.P.E. lockers in Salt Lake City
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      imageSrc="../assets/images/work/uw-secure-storage/hope-lockers.jpg"
+      description="Sketches of the H.O.P.E. lockers in Salt Lake City"
+      [borderOn]="true">
+    </app-image-viewer>
 
     <p>
       The H.O.P.E. lockers, shown above, cost $10,000 to build. The funds were raised through an indiegogo campaign. Another storage pilot program in Denver, shown below, cost $100,000 to initiate, and included a high upkeep cost each month onward.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/uw-secure-storage/denver-lockers.jpg"
-        class="work-body-image border"
-        alt="Denver Storage Lockers">
-      <figcaption class="work-body-image-caption">
-        One of the lockers from Denver's program
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      imageSrc="../assets/images/work/uw-secure-storage/denver-lockers.jpg"
+      description="One of the lockers from Denver's program"
+      [borderOn]="true">
+    </app-image-viewer>
 
     <p>
       Based on the narrow scope of existing solutions, we saw an opportunity for a cheaper, more sustainable, community-oriented system.
