add multi image galleries

--- a/src/app/image-viewer/image-viewer.component.html
+++ b/src/app/image-viewer/image-viewer.component.html
@@ -8,7 +8,7 @@
 
 <figure class="work-body-figure">
   <img
-    [src]="imageSrc"
+    [src]="path"
     [alt]="description"
     (click)="open(gallery)"
     class="work-body-image"
