--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -227,23 +227,13 @@
       Looking at our findings from the field visit and from our survey responses, we created a set of personas to represent the most common findings from our research. Rather than editorialize approximate stories for our personas, we based the descriptions and metadata of each persona on the most common, real tropes we found in our research data.
     </p>
 
-    <!-- <app-image-viewer
-      path="../assets/images/work/uw-secure-storage/HCDE-518-Personas-3.png"
-      description="Scenario-based persona"
-      [borderOn]="true">
-    </app-image-viewer> -->
-
-    <figure class="work-body-figure">
-      <a target="_blank" href="https://www.dropbox.com/s/yvkthd4v1x5a0we/HCDE518_Personas.pdf?dl=0">
-        <img
-          src="../assets/images/work/uw-secure-storage/HCDE-518-Personas-3.png"
-          class="work-body-image border"
-          alt="Scenario-based persona">
-      </a>
-      <figcaption class="work-body-image-caption">
-        One of the personas synthesized from our research findings. Click to view all.
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      [images]="personaImages"
+      path="../assets/images/work/uw-secure-storage/HCDE518_Personas-3.jpg"
+      description="A gallery of our scenario-based personas"
+      [borderOn]="true"
+      textColor="black">
+    </app-image-viewer>
 
     <p>
       With a more codified understanding of our diverse users, we began to design simple, sketch-based concepts for our early solutions. I developed three sketches that each explored ways to add storage at a minimal cost, using commonly available materials.
@@ -261,35 +251,11 @@
       </li>
     </ul>
 
-    <div class="work-body-image-grid">
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-secure-storage/sketch-1.jpg"
-          class="work-body-image border"
-          alt="Footlocker-based sketch">
-        <figcaption class="work-body-image-caption">
-          A system using commercial footlockers
-        </figcaption>
-      </figure>
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-secure-storage/sketch-2.jpg"
-          class="work-body-image border"
-          alt="Recycling-bin sketch">
-        <figcaption class="work-body-image-caption">
-          A system using public recycling bins
-        </figcaption>
-      </figure>
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-secure-storage/sketch-3.jpg"
-          class="work-body-image border"
-          alt="Modular-approach sketch">
-        <figcaption class="work-body-image-caption">
-          A modular system based around sub-components
-        </figcaption>
-      </figure>
-    </div>
+    <app-image-viewer
+      [images]="sketchImages"
+      path="../assets/images/work/uw-secure-storage/sketch-2.jpg"
+      description="A gallery of early sketches from design brainstorms">
+    </app-image-viewer>
 
     <h2 class="work-body-h2">
       Iterating on a Single Design
@@ -301,6 +267,10 @@
 
     <p>
       With a solution in mind, we had a lot of work to do to iterate and expand on the design. Over the next two weeks, we explored implementation, prototypes, and a representative information architecture for how such a system would work. We presented our design in a comprehensive brief.
+    </p>
+
+    <p>
+      Click below to view or download the brief via Dropbox.
     </p>
 
     <figure class="work-body-figure">
@@ -316,7 +286,7 @@
     </figure>
 
     <p>
-      This is a detailed report with many different elements. If you'd like to know more, please reach out. I'd be happy to walk you through it. Thanks for reading.
+      This is a detailed report with many different elements. If you'd like to know more, please reach out. Thanks for reading.
     </p>
 
   </div>
