update imageviewer for 2-across layouts; update projects

--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -44,17 +44,14 @@
       If you want to understand some of this task of recalibration, please takea look at <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">an excellent, quick summary of contextual shifts involved</a>. Designing with a humanitarian's outlook is not as intuitive as it sounds!
     </p>
 
-    <figure class="work-body-figure">
-      <a target="_blank" href="https://youtu.be/Fv5vE2vxYwY">
-        <img
-          src="../assets/images/work/uw-complex-systems/art-science-vca.png"
-          class="work-body-image border"
-          alt="Link to the Art and Science of VCA">
-        </a>
-      <figcaption class="work-body-image-caption">
-        An explanatory video about the IFRC's VCA system
-      </figcaption>
-    </figure>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/Fv5vE2vxYwY?rel=0"
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen>
+    </iframe>
 
     <p>
       Simultaneously, we dug deeply into the notion of complex systems and system design, reading two texts that informed our understanding.
@@ -150,15 +147,10 @@
       VCA facilitators were experienced applying these practices on pen & paper, in small groups. This methodology ensured the egalitarian nature of the process: everyone in the room could voice their concerns and be heard. But it was inherently limiting to the number of participants. This became our challenge:
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/uw-complex-systems/problem-solving.png"
-        class="work-body-image border"
-        alt="Link to the Art and Science of VCA">
-      <figcaption class="work-body-image-caption">
-        VCAs have traditionally relied on analog, participatory methods
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      path="../assets/images/work/uw-complex-systems/problem-solving.png"
+      description="VCAs have traditionally relied on analog, participatory methods">
+    </app-image-viewer>
 
     <p>
       How can we use technology to enhance the human-centered processes of the VCA without hindering the participatory, equitable nature of the model?
