--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -56,24 +56,14 @@
     </p>
 
     <div class="work-body-image-grid">
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-oculus-onboarding/first-contact.jpg"
-          class="work-body-image border"
-          alt="Footlocker-based sketch">
-        <figcaption class="work-body-image-caption">
-          Oculus First Contact
-        </figcaption>
-      </figure>
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-oculus-onboarding/tilt-brush.jpg"
-          class="work-body-image border"
-          alt="Recycling-bin sketch">
-        <figcaption class="work-body-image-caption">
-          Tilt Brush by Google
-        </figcaption>
-      </figure>
+      <app-image-viewer
+        path="../assets/images/work/uw-oculus-onboarding/first-contact.jpg"
+        description="Oculus First Contact">
+      </app-image-viewer>
+      <app-image-viewer
+        path="../assets/images/work/uw-oculus-onboarding/tilt-brush.jpg"
+        description="Tilt Brush by Google">
+      </app-image-viewer>
     </div>
 
     <p>
@@ -176,24 +166,14 @@
     </p>
 
     <div class="work-body-image-grid">
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-oculus-onboarding/moderation-3a.png"
-          class="work-body-image border"
-          alt="Helping Participants in VR">
-        <figcaption class="work-body-image-caption">
-          Helping participants into VR
-        </figcaption>
-      </figure>
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/uw-oculus-onboarding/moderation-2a.png"
-          class="work-body-image border"
-          alt="Moderation in Tilt Brush">
-        <figcaption class="work-body-image-caption">
-          Moderating with Tilt Brush
-        </figcaption>
-      </figure>
+      <app-image-viewer
+        path="../assets/images/work/uw-oculus-onboarding/moderation-3a.png"
+        description="Helping participants into VR">
+      </app-image-viewer>
+      <app-image-viewer
+        path="../assets/images/work/uw-oculus-onboarding/moderation-2a.png"
+        description="Moderating with Tilt Brush">
+      </app-image-viewer>
     </div>
 
     <p>
@@ -224,15 +204,10 @@
       We began to analyze our findings after testing our first participant. Typically, we would each note our own findings, and then begin to compare after reflecting independently. By the time we completed our eighth and final test, we had a growing body of findings, and were approaching consensus among the most severe issues.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/uw-oculus-onboarding/team-oasis-at-work.png"
-        class="work-body-image border"
-        alt="Team Oasis at Work">
-      <figcaption class="work-body-image-caption">
-        Our team, in a not-at-all-staged photograph; affinity-diagrams decorate the walls
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      path="../assets/images/work/uw-oculus-onboarding/team-oasis-at-work.png"
+      description="Our team, in a not-at-all-staged photograph">
+    </app-image-viewer>
 
     <p>
       We met a number of times following the study to prioritize our findings, put together affinity diagrams, and draft out our presentation and report.
