--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -2,7 +2,7 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        Motion Design for Ad Clients
+        Motion Design and Animation
       </h1>
 
       <div class="work-title-border"></div>
