--- a/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
+++ b/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
@@ -40,65 +40,13 @@
       Using a multi-step editor, a user could select an audience segment, criteria, and a graph type, and create a graph that could be customized or exported in a variety of ways.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-data-viz/viz-1a.png"
-        class="work-body-image border"
-        alt="Customizing a chart, step 1">
-      <figcaption class="work-body-image-caption">
-        A user may select a custom segment of their data to include in the graph
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-data-viz/viz-2a.png"
-        class="work-body-image border"
-        alt="Customizing a chart, step 2">
-      <figcaption class="work-body-image-caption">
-        They may select from a range of hundreds of different criteria to graph
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-data-viz/viz-3a.png"
-        class="work-body-image border"
-        alt="Customizing a chart, step 3">
-      <figcaption class="work-body-image-caption">
-        Depending on their prior selections, they may graph comparison, composition, or time-series graphs
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-data-viz/viz-4a.png"
-        class="work-body-image border"
-        alt="Customizing a chart, step 4">
-      <figcaption class="work-body-image-caption">
-        Users can control what style of graph they select, and toggle between options to compare
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-data-viz/viz-5a.png"
-        class="work-body-image border"
-        alt="Customizing a chart, step 5">
-      <figcaption class="work-body-image-caption">
-        Alternatively, they may select a table to customize
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-data-viz/viz-6a.png"
-        class="work-body-image border"
-        alt="Customizing a chart, step 6">
-      <figcaption class="work-body-image-caption">
-        The graph may be exported, or displayed elsewhere in Crowdskout for easy monitoring
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      [images]="csDataVizImages"
+      path="../assets/images/work/crowdskout-data-viz/viz-4a.png"
+      description="A gallery of Crowdskout's analytics feature"
+      textColor="salmon"
+      [borderOn]="true">
+    </app-image-viewer>
 
     <p>
       Crowdskout's data visualization component is a complex, interactive module of the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
