--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -35,25 +35,18 @@
       A Crowdskout user may use forms to ask any number of questions. These questions in turn can fuel the creating or updating of any of the hundreds of Crowdskout profile fields that exist in their database.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-form-editor/form-editor-1a.png"
-        class="work-body-image border"
-        alt="Example fields 1">
-      <figcaption class="work-body-image-caption">
-        A look at the field selection and questions on a Crowdskout form
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-form-editor/form-editor-2a.png"
-        class="work-body-image border"
-        alt="Example fields 1">
-      <figcaption class="work-body-image-caption">
-        Additional Crowdskout form fields
-      </figcaption>
-    </figure>
+    <div class="work-body-image-grid">
+      <app-image-viewer
+        path="../assets/images/work/crowdskout-form-editor/form-editor-1a.png"
+        description="A look at the field selection and questions on a Crowdskout form"
+        borderOn="true">
+      </app-image-viewer>
+      <app-image-viewer
+        path="../assets/images/work/crowdskout-form-editor/form-editor-2a.png"
+        description="Additional Crowdskout form fields"
+        borderOn="true">
+      </app-image-viewer>
+    </div>
 
     <p>
       Crowdskout's form editor component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
