--- a/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
+++ b/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
@@ -35,25 +35,12 @@
       Audience segments in Crowdskout are made up of deanonymized "profiles." A mock profile is shown below. Each profile is made up of hundreds of criteria, including demographic information as well as many other types of info.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-segmenting/segmenting-0a.png"
-        class="work-body-image border"
-        alt="Demographics fields of a Crowdskout profile">
-      <figcaption class="work-body-image-caption">
-        Demographics fields of a Crowdskout profile
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-segmenting/segmenting-0b.png"
-        class="work-body-image border"
-        alt="Activity from a Crowdskout profile">
-      <figcaption class="work-body-image-caption">
-        Activity fields from a Crowdskout profile
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      [images]="csProfileImages"
+      path="../assets/images/work/crowdskout-segmenting/segmenting-0a.png"
+      description="A gallery of Crowdskout's Profile Updates"
+      textColor="salmon">
+    </app-image-viewer>
 
     <p>
       Users build segments of profiles by selecting the criteria that they want to segment on, for instance, people of a certain gender, age, and/or ethnicity. Doing so, they can find all of the profiles in their database that match these criteria.
@@ -71,45 +58,12 @@
       We updated the segmenting tool to improve the way users create and manage their audience segments.
     </p>
 
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-segmenting/segmenting-1a.png"
-        class="work-body-image border"
-        alt="">
-      <figcaption class="work-body-image-caption">
-        Users can explore and drill-down into criteria to build a segment
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-segmenting/segmenting-2a.png"
-        class="work-body-image border"
-        alt="">
-      <figcaption class="work-body-image-caption">
-        As users select criteria to segment on, their selections appear, and their profiles filter to the matching criteria
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-segmenting/segmenting-3a.png"
-        class="work-body-image border"
-        alt="">
-      <figcaption class="work-body-image-caption">
-        Power users may write complex segments using CQL strings - a variant of SQL parsed by Crowdskout
-      </figcaption>
-    </figure>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/crowdskout-segmenting/segmenting-4a.png"
-        class="work-body-image border"
-        alt="">
-      <figcaption class="work-body-image-caption">
-        Users immediately see statistics about their segments' usable data and demographics. They may create unique graphs to see other detailed statistics about their segments.
-      </figcaption>
-    </figure>
+    <app-image-viewer
+      [images]="csSegmentingImages"
+      path="../assets/images/work/crowdskout-segmenting/segmenting-1a.png"
+      description="A gallery of Crowdskout's Segmenting Updates"
+      textColor="salmon">
+    </app-image-viewer>
 
     <p>
       Crowdskout's segmenting component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
