--- a/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
+++ b/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
@@ -38,24 +38,16 @@
     </p>
 
     <div class="work-body-image-grid">
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/vox-global-brand-redesign/original-1.png"
-          class="work-body-image border"
-          alt="VOX Global Homepage - Before">
-        <figcaption class="work-body-image-caption">
-          VOX Global Homepage - Before
-        </figcaption>
-      </figure>
-      <figure class="work-body-figure">
-        <img
-          src="../assets/images/work/vox-global-brand-redesign/new-1.png"
-          class="work-body-image border"
-          alt="VOX Global Homepage - After">
-        <figcaption class="work-body-image-caption">
-          VOX Global Homepage - After
-        </figcaption>
-      </figure>
+      <app-image-viewer
+        path="../assets/images/work/vox-global-brand-redesign/original-1.png"
+        description="VOX Global Homepage - Before"
+        [borderOn]="true">
+      </app-image-viewer>
+      <app-image-viewer
+        path="../assets/images/work/vox-global-brand-redesign/new-1.png"
+        description="VOX Global Homepage - After"
+        [borderOn]="true">
+      </app-image-viewer>
     </div>
 
     <h3 class="work-body-h3">
@@ -141,30 +133,6 @@
     <p>
       With an updated language & tone in mind, we began the process of overhauling our visual design holistically. We wanted the simplicity of our tone to extend to our visual representation.
     </p>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/vox-global-brand-redesign/original-1.png"
-        class="work-body-image border"
-        alt="VOX Global Homepage - Before">
-      <figcaption class="work-body-image-caption">
-        VOX Global Homepage - Before
-      </figcaption>
-    </figure>
-
-    <p>
-      We developed a new logo, brand, and web presence.
-    </p>
-
-    <figure class="work-body-figure">
-      <img
-        src="../assets/images/work/vox-global-brand-redesign/new-1.png"
-        class="work-body-image border"
-        alt="VOX Global Homepage - After">
-      <figcaption class="work-body-image-caption">
-        VOX Global Homepage - After
-      </figcaption>
-    </figure>
 
     <p>
       You can see the updated brand live at <a class="work-body-link" target="_blank" href="http://voxglobal.com/">voxglobal.com</a>.
