--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $border-medium: 2px;
 
 // Media Queries
 $breakpoints: (
+  'small': (min-width: 350px),
   'medium': (min-width: 640px),
   'mediumer': (min-width: 720px),
   'large': (min-width: 900px),
