responsive fix youtube; image updates for 2-wide

--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -44,14 +44,16 @@
       If you want to understand some of this task of recalibration, please takea look at <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">an excellent, quick summary of contextual shifts involved</a>. Designing with a humanitarian's outlook is not as intuitive as it sounds!
     </p>
 
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/Fv5vE2vxYwY?rel=0"
-      frameborder="0"
-      allow="autoplay; encrypted-media"
-      allowfullscreen>
-    </iframe>
+    <div class="work-body-youtube-video">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/Fv5vE2vxYwY?rel=0"
+        frameborder="0"
+        allow="autoplay; encrypted-media"
+        allowfullscreen>
+      </iframe>
+    </div>
 
     <p>
       Simultaneously, we dug deeply into the notion of complex systems and system design, reading two texts that informed our understanding.
