--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -129,7 +129,7 @@
 
     <div class="work-body-image-grid">
       <app-image-viewer
-        path="../assets/images/work/uw-secure-storage/hope-lockers.jpg"
+        path="../assets/images/work/uw-secure-storage/hope-lockers.png"
         description="Sketches of the H.O.P.E. lockers in Salt Lake City">
       </app-image-viewer>
       <app-image-viewer
@@ -236,7 +236,7 @@
       </app-image-viewer>
       <app-image-viewer
         [images]="sketchImages"
-        path="../assets/images/work/uw-secure-storage/sketch-2.jpg"
+        path="../assets/images/work/uw-secure-storage/sketch-2.png"
         description="A gallery of early sketches from design brainstorms">
       </app-image-viewer>
     </div>
