--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -80,3 +80,19 @@
     margin-top: 0.6em;
   }
 }
+
+.work-body-youtube-video {
+  position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+  margin-bottom: 1.5em;
+}
+
+.work-body-youtube-video iframe {
+  position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
